[package]
name = "payment_api"
version = "0.1.0"
authors = ["Tim Siwula <tcsiwula@gmail.com>"]

[dependencies]
#rocket = "0.3.14"
#rocket_codegen = "0.3.14"
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#r2d2 = "*"
#r2d2-diesel = "*"
