[package]
name = "payment_api"
version = "0.1.0"
authors = ["Tim Siwula <tcsiwula@gmail.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
